refactor: improve backend resources